Add auto_publish on service review API
