# apps/io-services-cms-webapp/src/webservice/controllers/review-service.ts
@@ -4,6 +4,7 @@ import {
   IAzureApiAuthorization,
   UserGroup,
 } from "@pagopa/io-functions-commons/dist/src/utils/middlewares/azure_api_auth";
+import { RequiredBodyPayloadMiddleware } from "@pagopa/io-functions-commons/dist/src/utils/middlewares/required_body_payload";
 import { RequiredParamMiddleware } from "@pagopa/io-functions-commons/dist/src/utils/middlewares/required_param";
 import { withRequestMiddlewares } from "@pagopa/io-functions-commons/dist/src/utils/request_middleware";
 import {
@@ -19,6 +20,7 @@ import {
 import { NonEmptyString } from "@pagopa/ts-commons/lib/strings";
 import * as RTE from "fp-ts/lib/ReaderTaskEither";
 import { pipe } from "fp-ts/lib/function";
+import { ReviewRequest as ReviewRequestPayload } from "../../generated/api/ReviewRequest";
 
 type Dependencies = {
   // A store of ServiceLifecycle objects
@@ -35,14 +37,17 @@ type HandlerResponseTypes =
 
 type ReviewServiceHandler = (
   auth: IAzureApiAuthorization,
-  serviceId: ServiceLifecycle.definitions.ServiceId
+  serviceId: ServiceLifecycle.definitions.ServiceId,
+  servicePayload: ReviewRequestPayload
 ) => Promise<HandlerResponseTypes>;
 
 export const makeReviewServiceHandler =
   ({ store }: Dependencies): ReviewServiceHandler =>
-  (_auth, serviceId) =>
+  (_auth, serviceId, body) =>
     pipe(
-      ServiceLifecycle.apply("submit", serviceId),
+      ServiceLifecycle.apply("submit", serviceId, {
+        autoPublish: body.auto_publish ?? false,
+      }),
       RTE.map(ResponseSuccessNoContent),
       RTE.mapLeft((err) => ResponseErrorInternal(err.message)),
       RTE.toUnion
@@ -58,6 +63,8 @@ export const applyRequestMiddelwares = (handler: ReviewServiceHandler) =>
       // only allow requests by users belonging to certain groups
       AzureApiAuthMiddleware(new Set([UserGroup.ApiServiceWrite])),
       // extract the service id from the path variables
-      RequiredParamMiddleware("serviceId", NonEmptyString)
+      RequiredParamMiddleware("serviceId", NonEmptyString),
+      // extract and validate the request body
+      RequiredBodyPayloadMiddleware(ReviewRequestPayload)
     )
   );
